#32 - finished porting all the default list variants, finishing sprint example