@@ -3,14 +3,11 @@ package org.flatscrew.latte;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 
 public class CommandExecutor {
 
-    private final ExecutorService executorService = Executors.newFixedThreadPool(
-            Math.max(2, Runtime.getRuntime().availableProcessors())
-    );
+    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
 
     public void shutdown() {
         executorService.shutdown();
@@ -22,7 +19,6 @@ public class CommandExecutor {
         if (command != null) {
             return CompletableFuture
                     .supplyAsync(command::execute, executorService)
-                    .orTimeout(5, TimeUnit.SECONDS)
                     .thenAccept(messageConsumer)
                     .exceptionally(ex -> {
                         errorConsumer.accept(ex);
